2006-03-21  Pawel Salek

	* libbalsa/mi{me,sc}.c: move PCRE dependency to mime.c
	* libbalsa/mailbox.c: copy the "deleted" flag as well (Emanuel).

2006-03-18  Pawel Salek

	* libbalsa/libbalsa.[hc]:
	* libbalsa/misc.[hc]: move library-dependent stuff to libbalsa.c.

2006-03-17  Pawel Salek

	* configure.in: create separately list of balsa-ab libraries (12
	libs removed). Albrecht Dreß fixed detection of buggy gpgme.
	* src/Makefile.am: use it.
	* libbalsa/libbalsa.[hc]:
	* libbalsa/misc.[hc]: move object-independent stuff to misc.c.
	* libbalsa/mailbox_pop3.c: include misc.h
	* src/ab-main.c: register only used objects.

2006-03-16 19:56  PeterB

	* libbalsa/mailbox.c: notify Gtk when msgno changes.

2006-03-09  Pawel Salek

	* libbalsa/address-book-ldap.c: use openldap-2.3.x compatible API.
	* libbalsa/libbalsa.c: the same.
	* libbalsa/imap/imap-handle.c: treat OpenSSL errors as critical.
	* src/balsa-mblist.c: don't be mad if an icon is not found.

2006-03-08 10:40  PeterB

	* src/main-window.c: ensure visible message after changing view
	filter.

2006-03-06  Ahmad Riza H Nst  <rizahnst@eriagempita.co.id>

	* configure.in: Added "id" (Indonesian) to the ALL_LINGUAS line

2006-03-05 10:23  PeterB

	* libbalsa/mailbox.c, libbalsa/mailbox.h, src/balsa-index.c: check
	whether user closed mailbox during long view-filter update.

2006-03-04  Pawel Salek

	* libbalsa/mailbox_mbox.c:  do not reference freed memory.
	* NEWS, configure.in: release 2.3.12.


2006-02-28  Pawel Salek

	* src/balsa-app.c: check mbnode fetched by gtk_tree_model_get()...
	* src/balsa-mblist.c: ... fixing bug 332980.
	* NEWS, configure.in: release 2.3.11.

2006-02-27 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* src/sendmsg-window.c: explicitly update gpg-mode when identity is
	changed, as apparently the callback is now called only when the
	check-button's state is changed.

2006-02-26 19:28  PeterB

	* src/balsa-index.c: scroll to ensure a visible message only if
	there isn't one.